# mirage

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.ja.md  README.md  SECURITY.md  build.rs
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
contrib/: mirage.service
docs/: architecture.md  features.md
patches/: patch-winit.sh
plugins/dolphin/: CMakeLists.txt  mirageactionplugin.cpp  mirageactionplugin.h  mirageactionplugin.json  mirageoverlayplugin.cpp  mirageoverlayplugin.h  mirageoverlayplugin.json  miragesocketclient.cpp  miragesocketclient.h
src/: cli.rs  config.rs  error.rs  lib.rs  lock.rs  main.rs  network.rs  resolve.rs
src/backend/: mod.rs  nextcloud.rs  webdav_xml.rs
src/cache/: mod.rs
src/db/: mod.rs  models.rs
src/fuse/: mod.rs  write_buffer.rs
src/sync/: ignore.rs  mod.rs  progress.rs  reconciler.rs
src/tray/: gui.rs  ipc.rs  mod.rs
src/upload/: mod.rs
tests/: backend_nextcloud.rs
