[package]
name = "mirage"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Linux cloud file sync client with on-demand FUSE filesystem"
repository = "https://github.com/archfill/mirage"
readme = "README.md"
keywords = ["cloud", "sync", "nextcloud", "fuse", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quick-xml = "0.37"
bytes = "1"
secrecy = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ctrlc = "3"
percent-encoding = "2"
libc = "0.2"
dirs = "6"
tracing-journald = "0.3"
ksni = "0.2"
notify-rust = "4"
serde_json = "1"
globset = "0.4"
lru = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.17"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
