[package]
name = "mirage"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Linux cloud file sync client with on-demand FUSE filesystem"
repository = "https://github.com/archfill/mirage"
readme = "README.md"
keywords = ["cloud", "sync", "nextcloud", "fuse", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
reqwest = { version = "0.13", features = ["json"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quick-xml = "0.39"
bytes = "1"
secrecy = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ctrlc = { version = "3", features = ["termination"] }
percent-encoding = "2"
libc = "0.2"
dirs = "6"
tracing-journald = "0.3"
ksni = "0.2"
notify-rust = "4"
serde_json = "1"
globset = "0.4"
lru = "0.16"
keyring = { version = "3", features = ["linux-native"] }
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
winit = { version = "0.30", features = ["x11", "wayland"] }
rpassword = "5"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.17"

[build-dependencies]
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
clap_mangen = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }